# ParticleFilter

./: .gitignore  CMakeLists.txt  README.md  README.txt
data/baseline/: GlobalLocalization_run1.mpg  GlobalLocalization_run3.mpg  GlobalLocalization_run4.mpg  GlobalLocalization_run5.mpg
include/: logReader.h  mapReader.h  particle.h  particle.h~  particleFilter.h  types.h  visualize.h
src/: bee-map.c  gaussian.m  gaussian.m~  logReader.cpp  mapReader.cpp  observationModel.m  observationModel.m~  particle.cpp  particleFilter.cpp  particleOld.cpp  visualize.cpp
